--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
   <section class="trust">
     <h2>Trusted by Businesses Worldwide</h2>
-    <p>From fintech startups to enterprise platforms, SwiftReload powers transactions across five continents. We're compliant with PCI DSS standards and operate with end-to-end encryption and IP-restricted API access. Our partners value our commitment to uptime, global availability, and blazing-fast customer support.</p>
+    <p>From fintech startups to enterprise platforms, SwiftReload powers digital commerce across five continents. Our platform delivers reliable infrastructure, rapid response times, and seamless scalability for all your digital service needs.</p>
   </section>
 
   <footer>
@@ -164,3 +164,4 @@
   </footer>
 </body>
 </html>
+
