--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,15 +11,15 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(to bottom, #f3f4f6 0%, #e5e7eb 100%);
+      background: linear-gradient(to bottom, #f9fafb 0%, #e5e7eb 100%);
       color: #1f2937;
     }
     header {
-      background: linear-gradient(145deg, #00c6ff, #0072ff);
-      padding: 3.5rem 2rem 2.5rem;
+      background: #ffffff;
+      padding: 3rem 2rem 2rem;
       text-align: center;
-      color: white;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      color: #111827;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
     }
     .logo {
       max-width: 200px;
@@ -72,7 +73,7 @@
       box-shadow: 0 15px 35px rgba(0, 0, 0, 0.08);
     }
     .service-card img {
-      height: 60px;
+      height: 64px;
       margin-bottom: 1rem;
     }
     .service-card h3 {
@@ -140,7 +141,7 @@
       <p>Integrate 100,000+ hotel deals globally. Perfect for travel platforms and agents.</p>
     </div>
     <div class="service-card">
-      <img src="https://img.icons8.com/color/96/airport-lounge.png" alt="VIP Lounges" />
+      <img src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/96/external-lounge-hotel-service-flatart-icons-outline-flatarticons.png" alt="VIP Lounges" />
       <h3>VIP Lounges</h3>
       <p>Offer premium access to lounges in 130+ countries. Elevate your client experience.</p>
     </div>
@@ -150,15 +151,16 @@
       <p>Recharge prepaid numbers instantly across 150+ countries via our robust platform.</p>
     </div>
     <div class="service-card">
-      <img src="https://img.icons8.com/fluency/96/electricity.png" alt="Utilities Payment" />
+      <img src="https://img.icons8.com/fluency/96/lightning-bolt.png" alt="Utilities Payment" />
       <h3>Utilities Payment</h3>
       <p>Enable bill payment for electricity, water, internet, and more with one integration.</p>
-        <div class="service-card">
+    </div>
+    <div class="service-card">
       <img src="https://img.icons8.com/color/96/sim-card-chip.png" alt="eSIM" />
       <h3>eSIM</h3>
       <p>Offer digital eSIM plans for global data roaming. Perfect for travel, business, and nomads.</p>
     </div>
-$1
+  </section>
 
   <section class="trust">
     <h2>Trusted by Businesses Worldwide</h2>
