--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
       <p>Integrate 100,000+ hotel deals globally. Perfect for travel platforms and agents.</p>
     </div>
     <div class="service-card">
-      <img src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/96/external-lounge-hotel-service-flatart-icons-outline-flatarticons.png" alt="VIP Lounges" />
+      <img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/96/external-airport-lounge-vacation-planning-flaticons-lineal-color-flat-icons.png" alt="VIP Lounges" />
       <h3>VIP Lounges</h3>
       <p>Offer premium access to lounges in 130+ countries. Elevate your client experience.</p>
     </div>
     <div class="service-card">
-      <img src="https://img.icons8.com/fluency/96/smartphone-tablet.png" alt="Mobile TopUp" />
+      <img src="https://img.icons8.com/fluency/96/smartphone-tablet.png" alt="Mobile Top-Up" />
       <h3>Mobile Top-Up</h3>
       <p>Recharge prepaid numbers instantly across 150+ countries via our robust platform.</p>
     </div>
