Update service offerings in index.html
Removed references to Virtual Prepaid Cards and Utilities Payment services.

--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
   <header>
     <img src="Logo-01.jpg" alt="SwiftReload Logo" class="logo" />
     <h1>SwiftReload B2B Portal</h1>
-    <p>Premium Global Services for Enterprises, Fintechs, and Digital Resellers</p>
+    <p>Premium Global Services for Enterprises and Digital Resellers</p>
   </header>
 
   <section class="intro">
     <h2>Powering the Future of Digital Commerce</h2>
-    <p>SwiftReload is your trusted partner for streamlined digital services. We offer fast, secure, and scalable solutions for businesses around the world—whether you're reselling gift cards, offering mobile top-ups, issuing virtual prepaid cards, or integrating travel and utility services. With our unified B2B platform, your business gets instant access to a wide global catalog through a powerful API or user-friendly portal.</p>
+    <p>SwiftReload is your trusted partner for streamlined digital services. We offer fast, secure, and scalable solutions for businesses around the world—whether you're reselling gift cards, offering mobile top-ups, or integrating travel and utility services. With our unified B2B platform, your business gets instant access to a wide global catalog through a powerful API or user-friendly portal.</p>
   </section>
 
   <section class="services">
@@ -125,12 +125,7 @@
       <h3>Gift Cards</h3>
       <p>Instant access to global brands. Ideal for loyalty programs, digital gifting, or reselling.</p>
     </div>
-    <div class="service-card">
-      <img src="https://img.icons8.com/fluency/96/bank-card-back-side.png" alt="Virtual Cards" />
-      <h3>Virtual Prepaid Cards</h3>
-      <p>Issue and manage non-reloadable Visa or Mastercard cards. Secure and global-ready.</p>
-    </div>
-    <div class="service-card">
+     <div class="service-card">
       <img src="https://img.icons8.com/fluency/96/airplane-take-off.png" alt="Flight Booking" />
       <h3>Flight Booking</h3>
       <p>Connect with our flight engine to book global routes at competitive rates for your clients.</p>
@@ -149,11 +144,6 @@
       <img src="https://img.icons8.com/fluency/96/smartphone-tablet.png" alt="Mobile Top-Up" />
       <h3>Mobile Top-Up</h3>
       <p>Recharge prepaid numbers instantly across 150+ countries via our robust platform.</p>
-    </div>
-    <div class="service-card">
-      <img src="https://img.icons8.com/fluency/96/lightning-bolt.png" alt="Utilities Payment" />
-      <h3>Utilities Payment</h3>
-      <p>Enable bill payment for electricity, water, internet, and more with one integration.</p>
     </div>
     <div class="service-card">
       <img src="https://img.icons8.com/color/96/sim-card-chip.png" alt="eSIM" />
