Update introductory paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   <section class="intro">
     <h2>Powering the Future of Digital Commerce</h2>
-    <p>SwiftReload is your trusted partner for streamlined digital services. We offer fast, secure, and scalable solutions for businesses around the world—whether you're reselling gift cards, offering mobile top-ups, or integrating travel and utility services. With our unified B2B platform, your business gets instant access to a wide global catalog through a powerful API or user-friendly portal.</p>
+    <p>SwiftReload is your trusted partner for streamlined digital services. We offer fast, secure, and scalable solutions for businesses around the world—whether you're reselling gift cards, offering mobile top-ups, or integrating travel. With our unified B2B platform, your business gets instant access to a wide global catalog through a powerful API or user-friendly portal.</p>
   </section>
 
   <section class="services">
